
Tue Apr 15 11:18:46 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* inssel.brg: don't overwrite symbolic registers.

Mon Apr 14 17:41:34 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* inssel-x86.brg: fix conversion from long to float.

2003-04-11  Dietmar Maurer  <dietmar@ximian.com>

	* mini.c (mini_init): use an opcode for get_Chars (OP_GETCHR)

2003-04-10  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_type_blittable): MONO_TYPE_OBJECT is blittable.

	* driver.c: Added --print-vtable option as in the old JIT.

Thu Apr 10 17:43:49 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* inssel-long32.brg, exceptions.cs: fix conversions from long, too.

Thu Apr 10 16:27:43 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* inssel.brg, basic.cs: fixed checked conversions to byte and short.

2003-04-09  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c regalloc.c regalloc.h: Fix memory leak.

2003-04-09  Dietmar Maurer  <dietmar@ximian.com>

	* aot.c (mono_aot_get_method): register all used strings

Wed Apr 9 15:22:18 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* mini.c: always intern strings references with ldstr at compile time.

Tue Apr 8 11:41:26 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* Makefile.am: add BUILT_SOURCES.

Mon Apr 7 16:31:34 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* driver.c: give a better error message when the assembly to execute
	doesn't have an entry point.

2003-04-07  Dietmar Maurer  <dietmar@ximian.com>

	* Makefile.am: added hack for automake

	* mono/mini/mini.c (mono_save_args): always copy arguments to keep
	correct sematics.

	* mono/mini/ssa.c (mono_ssa_avoid_copies): don't optimize calls

22003-04-07  Martin Baulig  <martin@ximian.com>

	* Makefile.am: Added Makefile.am.

	* debugger-main.c: Removed, this is now in the debugger where it
	belongs.

	* mini.pc.in: Call this package `mini' for the moment.
